# ct-app

./: README.md  pyproject.toml
ctapp/: LICENSE  Makefile  manage.py
ctapp/ctapp/: asgi.py  settings.py  urls.py  wsgi.py
ctapp/threads/: admin.py  models.py  views.py
ctapp/threads/migrations/: 0001_initial.py  0002_rename_cooperitems_cooperitem_rename_vaitems_vaitem.py
