[tool.poetry]
name = "ctapp"
version = "0.1.0"
description = ""
authors = ["Jason Heppler <jason.heppler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2 = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
